--- a/cabal.project
+++ b/cabal.project
@@ -9,20 +9,20 @@ package wallet-poc
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-chain
-  tag: 0d6030d6e8e84dcdfa1eac2d8137030f566da2c0
+  location: file:///home/erikd/Git/IOHK/NewCodeBase/cardano-base
+  tag: 65b8952283b13b33ea4dff59ac7263708a79750b
   subdir: binary
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-chain
-  tag: 0d6030d6e8e84dcdfa1eac2d8137030f566da2c0
+  location: https://github.com/input-output-hk/cardano-ledger
+  tag: 6b5e0923d30f1d331db6b063be047571fb578f37
   subdir: crypto
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-chain
-  tag: 0d6030d6e8e84dcdfa1eac2d8137030f566da2c0
+  location: https://github.com/input-output-hk/cardano-ledger
+  tag: 6b5e0923d30f1d331db6b063be047571fb578f37
 
 source-repository-package
   type: git
@@ -32,7 +32,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
-  tag: ff5fd5f33849be8a826506c34e5b0278f267f804
+  tag: 28f22dd93ce55b8af3b7e18a5b74762bd919eea8
 
 source-repository-package
   type: git
@@ -43,22 +43,29 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 8456e488fd26e34f0d15c957965d6cc5c51427af
+  tag: 46b1cb807e2ff1f475890a5474e667e472c60d95
+  subdir: iohk-monitoring
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/iohk-monitoring-framework
+  tag: 46b1cb807e2ff1f475890a5474e667e472c60d95
+  subdir: basic-tracer
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: caabc545ae45c6b702300f7a2c6fdb54cb876b00
+  tag: 867680388509df2e699353ff1d971fc359576e75
   subdir: io-sim-classes
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: caabc545ae45c6b702300f7a2c6fdb54cb876b00
+  tag: 867680388509df2e699353ff1d971fc359576e75
   subdir: ouroboros-network
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: caabc545ae45c6b702300f7a2c6fdb54cb876b00
+  tag: 867680388509df2e699353ff1d971fc359576e75
   subdir: typed-protocols
